<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/welcomebg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/welcomebg"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/Grocifytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/grocify"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_explore_your_dream_food"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/welcomebg"
        app:layout_constraintTop_toBottomOf="@+id/Grocifytext"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/Registerbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="@+id/welcomebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.349"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <TextView
        android:id="@+id/Signintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/welcomebg"
        app:layout_constraintTop_toBottomOf="@+id/Registerbtn"
        app:layout_constraintVertical_bias="0.23"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:onClick="login"/>
</androidx.constraintlayout.widget.ConstraintLayout>